--- a/package.json
+++ b/package.json
@@ -4,37 +4,46 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
-    "start:dev": " nodemon ./bin/server.js",
+    "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.js",
-    "lint:fix": "eslint --fix **/*.js"
+    "lint:fix": "eslint --fix **/*.js",
+    "test": "cross-env NODE_ENV=production jest --no-cache --verbose --detectOpenHandles",
+    "test:coverage": "cross-env NODE_ENV=production jest --coverage"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.4.4",
     "bcryptjs": "^2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
-    "dotenv": "^10.0.0",
+    "dotenv": "^9.0.2",
     "express": "4.17.1",
     "express-query-boolean": "^2.0.0",
-    "express-rate-limit": "^5.2.6",
-    "helmet": "^4.6.0",
+    "gravatar": "^1.8.1",
+    "jimp": "^0.16.1",
     "joi": "^17.4.0",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^1.0.0",
+    "mailgen": "^2.0.14",
     "mongoose": "^5.12.11",
     "mongoose-paginate-v2": "^1.3.18",
-    "morgan": "1.10.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "uniqid": "5.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-json": "3.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "nodemon": "2.0.7"
+    "jest": "^27.0.3",
+    "nodemon": "2.0.7",
+    "supertest": "^6.1.3"
   }
 }
